// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category form renders add if no category prop 1`] = `
<CategoryForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name:
      <input
        name="name"
        onChange={[Function]}
        value=""
      />
    </label>
    <label>
      Budget:
      <input
        name="budget"
        onChange={[Function]}
        value=""
      />
    </label>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</CategoryForm>
`;

exports[`Category form renders add if no category prop 2`] = `
<CategoryForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "budget": "400",
            "name": "shopping",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name:
      <input
        name="name"
        onChange={[Function]}
        value=""
      />
    </label>
    <label>
      Budget:
      <input
        name="budget"
        onChange={[Function]}
        value=""
      />
    </label>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</CategoryForm>
`;

exports[`Category form renders add if no category prop 3`] = `
<CategoryForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "budget": "400",
            "name": "shopping",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name:
      <input
        name="name"
        onChange={[Function]}
        value=""
      />
    </label>
    <label>
      Budget:
      <input
        name="budget"
        onChange={[Function]}
        value=""
      />
    </label>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</CategoryForm>
`;
